plugins {
    id 'java'
    id 'org.springframework.boot' version '2.1.7.RELEASE'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.dhbw.dndevolved'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-tomcat"
    implementation "io.springfox:springfox-oas:3.0.0"
    implementation "io.springfox:springfox-swagger-ui:3.0.0"
    implementation "com.github.joschi.jackson:jackson-datatype-threetenbp:2.6.4"
    implementation "javax.validation:validation-api:2.0.1.Final"
    implementation "org.springframework.plugin:spring-plugin-core:2.0.0.RELEASE"
    implementation 'javax.xml.bind:jaxb-api:2.2.4'
    implementation 'org.springframework.data:spring-data-jpa:3.1.0'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
